syntax = "proto3";

package go.micro.srv.trace.trace;

import "github.com/micro/go-platform/trace/proto/trace.proto";

service Trace {
	rpc Create(CreateRequest) returns (CreateResponse) {}
	rpc Read(ReadRequest) returns (ReadResponse) {}
	rpc Delete(DeleteRequest) returns (DeleteResponse) {}
	rpc Search(SearchRequest) returns (SearchResponse) {}
	// There is no update
}

message CreateRequest {
	Span span = 1;
}

message CreateResponse {
}

message ReadRequest {
	// trace id
	string id = 1;
}

message ReadResponse {
	repeated Span spans = 1;
}

message DeleteRequest {
	// trace id
	string id = 1;
}

message DeleteResponse {
}

message SearchRequest {
	string name = 1;
	int64 limit = 2;
	int64 offset = 3;
	bool reverse = 4;
}

message SearchResponse {
	repeated Span spans = 1;
}
